// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Client .addReaction add a reaction to story 1`] = `
Array [
  Object {
    "body": Object {
      "emoji": ":happy",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/beta/stories/1/comments/5/reactions",
  },
]
`;

exports[`#Client .createLabel create a label 1`] = `
Array [
  Object {
    "body": Object {
      "color": "fff",
      "name": "sup",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/beta/labels",
  },
]
`;

exports[`#Client .createProject creates a new project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/beta/projects",
  },
]
`;

exports[`#Client .createStoryLink create a story link 1`] = `
Array [
  Object {
    "body": Object {
      "object_id": 1234,
      "verb": "blocks",
      "verb_id": 1,
    },
    "method": "POST",
    "uri": "http://localhost:4001/api/beta/story-links",
  },
]
`;

exports[`#Client .deleteComment deletes a existing comment 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/beta/stories/5/comments/3",
  },
]
`;

exports[`#Client .deleteProject deletes a existing project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": "DELETE",
    "uri": "http://localhost:4001/api/beta/projects/1",
  },
]
`;

exports[`#Client .deleteReaction deletes a reaction in story 1`] = `
Array [
  Object {
    "body": Object {
      "emoji": ":happy",
    },
    "method": "DELETE",
    "uri": "http://localhost:4001/api/beta/stories/1/comments/5/reactions",
  },
]
`;

exports[`#Client .getProject requests a single project 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/projects/1234",
  },
]
`;

exports[`#Client .getStoryLink get a story link 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/story-links/1234",
  },
]
`;

exports[`#Client .listLabels list all labels 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/labels",
  },
]
`;

exports[`#Client .listProjects returns a list of projects with a clubhouse account 1`] = `
Array [
  Object {
    "body": undefined,
    "method": undefined,
    "uri": "http://localhost:4001/api/beta/projects",
  },
]
`;

exports[`#Client .updateComment update a existing comment 1`] = `
Array [
  Object {
    "body": Object {
      "text": "this is a test comment",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/beta/stories/12/comments/5",
  },
]
`;

exports[`#Client .updateProject updates a existing project 1`] = `
Array [
  Object {
    "body": Object {
      "name": "test",
    },
    "method": "PUT",
    "uri": "http://localhost:4001/api/beta/projects/12",
  },
]
`;
